# Smart-Attendance-System-Face-Recognition

backend/: .env  .gitignore  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  main.py
backend/app/api/: students.py
backend/app/models/: embedding.py  student.py
backend/app/recognition/: engine.py
backend/app/repositories/: embedding_repo.py  student_repo.py
backend/app/schemas/: student.py
backend/app/utils/: image_utils.py
