[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "insightface>=1.0.1",
    "numpy==1.26.3",
    "onnxruntime==1.16.3",
    "opencv-python==4.9.0.80",
    "pydantic[email]==2.5.3",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
]
